--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,11 @@
   "manifest_version": 3,
   "name": "Smart Bookmark Organizer",
   "version": "1.0.0",
-  "description": "Automatically organize bookmarks from YouTube, Instagram, and social media into smart categories. Save videos, stories, articles with one click!",
+  "description": "Organize bookmarks from YouTube, Instagram, TikTok and more with AI-powered categorization",
   "permissions": [
     "storage",
     "tabs",
-    "bookmarks",
     "activeTab"
-  ],
-  "host_permissions": [
-    "https://*/*",
-    "http://*/*"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -20,6 +15,11 @@
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "background": {
     "service_worker": "background.js"
@@ -30,10 +30,5 @@
       "js": ["content.js"],
       "run_at": "document_idle"
     }
-  ],
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  }
+  ]
 }
